--- a/entrega1CSS/src/CSS/_base.scss
+++ b/entrega1CSS/src/CSS/_base.scss
@@ -1,5 +1,5 @@
 
-.container-1 {
+.container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(auto, 7.6em));
     grid-auto-rows: minmax(auto, 7.6em);
@@ -13,29 +13,32 @@
     }
 }
 
-.container-2 {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(auto, 7.6em));
-    grid-auto-rows: minmax(auto, 7.6em);
-    gap: 1em;
-    margin: 1em;
-    & div {
+.div1{
+        display: grid;
+        gap: 1em;
+        margin: 1em;
+
+& div {
         border: solid black 1px;
+        height: 8em;
+        width: 10em;
         padding: 0.2em;
     }
 }
 
-.container-3 {
+.div2 {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(auto, 7.6em));
-    grid-auto-rows: minmax(auto, 7.6em);
     gap: 1em;
     margin: 1em;
+
     & div {
         border: solid black 1px;
+        height: 8em;
+        width: 10em;
         padding: 0.2em;
     }
 }
+
 
 .color-box-text {
     background-color: white;
