--- a/entrega1CSS/src/CSS/styles.scss
+++ b/entrega1CSS/src/CSS/styles.scss
@@ -1,5 +1,11 @@
 @import url('./_base.scss');
 
+.divPage{
+    margin-left: 20em;
+    border: solid blue 2px;
+    padding: 0.2em;
+    width: 6em;
+}
 
 .container-1{
 
