--- a/entrega1CSS/src/CSS/styles.scss
+++ b/entrega1CSS/src/CSS/styles.scss
@@ -7,6 +7,7 @@
     width: 6em;
 }
 
+//
 .container-1{
 
 .base-color{
@@ -52,6 +53,7 @@
 
 }
 
+//
 .container-2 {
 
     .base-color {
@@ -97,7 +99,7 @@
 
 }
 
-
+//
 .container-3 {
 
     .base-color {
