arreglado ejercicio dos

--- a/entrega1CSS/src/CSS/styles2.scss
+++ b/entrega1CSS/src/CSS/styles2.scss
@@ -1,5 +1,6 @@
 @import url('./_base.scss');
 
+
 .divPages {
     margin-left: 20em;
     border: solid red 2px;
@@ -10,13 +11,21 @@
     
 }
 
+
 main{
     margin: 1em;
     display: grid;
-    grid-template-columns: 50% 50%;
+    gap: 1em;
+    
+    #change-color-button{
+        margin: 0 auto;
+            width: 10%;
+        color:rgba(48, 48, 214, 0.922)
+    }
 
     .div1{
         margin: 0 auto;
+   
 
        .base-1{
       background-color: green;
@@ -40,7 +49,7 @@ main{
     -moz-box-shadow: 6px 6px 20px 32px rgba(19, 107, 24, 0.91);
     box-shadow: 6px 6px 20px 32px rgba(19, 107, 24, 0.91); }
     }
-    // 
+    /* */
     .div2{
       margin: 0 auto;
     .base-2 {
@@ -52,7 +61,7 @@ main{
     .warning-2{
         background-color: #3BA99C;
     }
-    .principal-1{
+    .principal-2{
         color: blue;
     }
     .secondary-2{
