--- a/ejercicio2CSS/src/SCSS/styles.scss
+++ b/ejercicio2CSS/src/SCSS/styles.scss
@@ -76,23 +76,39 @@ header {
           justify-content: center;
           margin:  0 auto;
 
-          .card{
+          & .card{
             border: solid 1px;
             display: grid;
-            & img{
+            padding: 1em;
+            border-radius: 10px;
+
+            img{
 
                 margin: 0 auto;
-                margin-top: 1em;
                 border-radius: 100%;
             }
-            & .member_name{
+             .longName{
+            white-space: nowrap;
+                    margin: 0 auto;
+                        background-color: red;
+                        min-width: 50px;
+                        width: auto;
+                        max-width: 96px;
+                        // margin-bottom: 1em; 
+                        padding-bottom: 0;
+                        padding: 0em 1em 0em;
+                        height: auto;
+            }
+            .member_name{
                 margin: 0 auto;
                 background-color: #9fcf30;
                 min-width: 50px;
                 width: auto;
                 max-width: 96px;
-                margin-bottom: 1em; 
-                padding-bottom: 0;     
+                // margin-bottom: 1em; 
+                padding-bottom: 0;   
+                padding: 0em 1em 0em;  
+                height: auto;
                }
           }
         }
